# reposignal

./: .env.example  .gitignore  README.md  pyproject.toml  reanalyze.py  run.py  seed_repos.json  seed_repos_metadata.json  seed_repos_overview.md
.github/workflows/: ci.yml
.omc/state/: agent-replay-89f680be-f89f-40ad-b6f4-36bcc4c42416.jsonl  hud-stdin-cache.json  last-tool-error.json  subagent-tracking.json
data/cache/: action_descriptions.json  ai_review_actions.json
data/cloudflare/: d1.sql  kv-analysis-current.json  r2-manifest.json
data/profiles/: 2dust--v2rayN.json  3b1b--manim.json  567-labs--instructor.json  AUTOMATIC1111--stable-diffusion-webui.json  Aider-AI--aider.json  Alliedium--awesome-github-actions.json  BurntSushi--ripgrep.json  Chalarangelo--30-seconds-of-code.json  ChatGPTNextWeb--NextChat.json  Comfy-Org--ComfyUI.json  EbookFoundation--free-programming-books.json  Effect-TS--effect.json  EleutherAI--lm-evaluation-harness.json  (+190 more)
docs/: github-actions-workflow-research.md
site/: .gitignore  package-lock.json  package.json  svelte.config.js  wrangler.toml
src/: analyzer.py  changelog.py  config_parsers.py  crawler.py  dagster_defs.py  enricher.py  extended_crawler.py  lineage.py  models.py  patterns.py  profiles.py  quality.py  reporter.py  security.py  seed_management.py  validation.py
tests/: test_analyzer.py  test_config_parsers.py  test_crawler.py  test_extended_crawler.py  test_extra_repos.py  test_extractor.py  test_lineage_seed_management.py  test_patterns_security_quality.py  test_reporter.py  test_validation_and_dagster.py
(+88 files in other folders)
