[project]
name = "reposignal"
version = "0.1.0"
description = "Engineering intelligence from open source repos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.13.6",
    "duckdb>=1.5.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
